--- a/README
+++ b/README
@@ -1,3 +1,2 @@
-This is the contents of my talk give 8/23/2013. Still a bit rough around the
-edges...
+This is the contents of my talk given 7/17/2014. Still a work in progress.
 
